--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ jsonwebtoken = "9.3.0"
 tower = {version="0.5.2", features = ["util"]}
 tower-http = {version = "0.6.2", features = ["cors"]}
 cached = "0.54.0"
-reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.12", features = ["json"] }
 lazy_static = "1.5.0"
 dotenv = "0.15.0"
 
